--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <input
       type="text"
       id="searchInput"
-      placeholder="Enter Pokémon name (e.g. pikachu)"
+      placeholder="Enter Pokémon name (e.g. Pikachu)"
     />
     <button id="searchBtn">Search</button>
   </div>
@@ -23,3 +23,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
