--- a/index.html
+++ b/index.html
@@ -18,9 +18,13 @@
     <button id="searchBtn">Search</button>
   </div>
 
-  <div id="card-container"></div>
+  <div class="layout">
+    <div id="card-container"></div>
+    <div id="moves-container"></div>
+  </div>
 
   <script src="script.js"></script>
 </body>
 </html>
+
 
